syntax = "proto3";

package myservice;

service MyGrpcService {
  rpc Infer (InferRequest) returns (InferResponse);
}

message InferRequest {
  string input = 1;
}

message InferResponse {
  string output = 1;
}
